--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,7 @@ build_flags =
 	-D STM32F411CEU6
 	-D ARCH_STM32
 lib_deps = 
-	khoih-prog/STM32_TimerInterrupt@^1.3.0
+	; khoih-prog/STM32_TimerInterrupt@^1.3.0
 	adafruit/Adafruit SSD1306@^2.5.4
 	adafruit/Adafruit GFX Library@^1.11.2
 	thomasfredericks/Bounce2@^2.71
